[SPv175+] Don't invalidate chunk for tiny transform changes

This ignores the computation error introduced when mapping to and from
the common planar of the layer and the chunk while the relative
transform between the layer and the chunk doesn't actually change.

Bug: 814711
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ie97b425eb3de601107328513b611b3f8676afa73
Reviewed-on: https://chromium-review.googlesource.com/1040537
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555820}
Former-commit-id: 8ab29f09a7bbf904ba1567a26ff28b9cf4d6953a